--- a/front/gemma2.html
+++ b/front/gemma2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Gemma 2B Text Generator</title>
-
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 
